# FlashVSR-app

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
backend/: .env.compose.example  .env.dev.example  .env.example  .python-version  Dockerfile  Dockerfile.celery  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_task_timestamps.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  files.py  system.py  tasks.py
backend/app/core/: __init__.py  celery_app.py  database.py
backend/app/flashvsr_core/: __init__.py
backend/app/flashvsr_core/diffsynth/: __init__.py
backend/app/flashvsr_core/diffsynth/configs/: model_config.py
backend/app/flashvsr_core/diffsynth/distributed/: xdit_context_parallel.py
backend/app/flashvsr_core/diffsynth/models/: model_manager.py  wan_video_dit.py  wan_video_vae.py
backend/app/flashvsr_core/diffsynth/pipelines/: __init__.py  base.py  flashvsr_color.py  flashvsr_full.py  flashvsr_tiny.py  flashvsr_tiny_long.py  wan_video.py  wan_video_runtime.py
backend/app/flashvsr_core/wan_utils/: __init__.py  lq_proj.py  tcdecoder.py
backend/app/models/: __init__.py  task.py
backend/app/schemas/: task.py
backend/app/services/: __init__.py  aspect_strategy.py  chunk_export.py  flashvsr_device.py  flashvsr_io.py  flashvsr_service.py  progress.py  video_export.py  video_metadata.py  video_preprocessor.py  video_streaming.py
backend/app/tasks/: __init__.py  flashvsr_task.py  maintenance.py
backend/tests/: test_flashvsr_helpers.py
docs/: api.md  architecture.md  deployment.md  pipeline_parallel_optimization.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml
scripts/: dev.sh  install_block_sparse_attn.sh
(+17 files in other folders)
